# homeggs-api

./: .gitignore  pyproject.toml
homeggs_api/account/: admin.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
homeggs_api/account/migrations/: 0001_initial.py
homeggs_api/api/: urls.py
homeggs_api/api/settings/: __init__.py
homeggs_api/budget/: admin.py  apps.py  tests.py  urls.py
homeggs_api/budget/migrations/: 0001_initial.py
homeggs_api/budget/models/: __init__.py  company.py  exceptional_expense.py  extra.py  fee_or_expense.py  salary.py  saving.py  tax.py
homeggs_api/budget/serializers/: __init__.py  company.py  exceptional_expense.py  extra.py  fee_or_expense.py  salary.py  saving.py  tax.py
homeggs_api/budget/views/: __init__.py  company.py  exceptional_expense.py  extra.py  fee_or_expense.py  salary.py  saving.py  tax.py  views.py
homeggs_api/desk/: urls.py
homeggs_api/event/: urls.py
homeggs_api/shop/: admin.py  urls.py
homeggs_api/shop/migrations/: 0001_initial.py
homeggs_api/shop/models/: coast.py  product.py  shop.py
homeggs_api/shop/serializers/: __init__.py  coast.py  product.py  shop.py
homeggs_api/shop/views/: __init__.py  coast.py  product.py  shop.py
omega_back/account/: admin.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
omega_back/api/: urls.py
omega_back/budget/: admin.py  models.py  permissions.py  serializers.py  urls.py
omega_back/desk/: urls.py
omega_back/event/: urls.py
omega_back/shop/: urls.py
(+46 files in other folders)
